--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,7 @@
 
 body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background: #fff url(../imagens/fundo.png) repeat-x;
+    background: #fff url(fundo.png) repeat-x;
 }
 
 #container{
@@ -17,13 +17,13 @@ body{
 #topo{
     height: 150px;
     padding-top: 25px;
-    background: url(../imagens/detalhe-topo.png) no-repeat right top;
+    background: url(detalhe-topo.png) no-repeat right top;
 }
 
 .logo{
     width: 152px;
     height: 66px;
-    background: url(../imagens/logo.png) no-repeat center;
+    background: url(logo.png) no-repeat center;
     text-indent: -3000px;
 }
 
@@ -51,7 +51,7 @@ ul {
     line-height: 2.1em;
     text-decoration: none;
     color: #fff;
-    background: url(../imagens/divisor.png) no-repeat left center;
+    background: url(divisor.png) no-repeat left center;
 }
 
 #topo ul .primeiro a{
@@ -105,7 +105,7 @@ body.fotos #navegacao a#fotos
 .caixa{
     margin: 10px 0;
     padding: 5px;
-    background: #f3f3f3 url(../imagens/fundo-caixa.png);
+    background: #f3f3f3 url(fundo-caixa.png);
 }
 
 h2{
@@ -134,7 +134,7 @@ h2{
 #lateral ul a:hover{
     color: #a1a1a1;
     padding-left: 20px;
-    background: #f9f9f9 url(../imagens/marcador.png) no-repeat left center;
+    background: #f9f9f9 url(marcador.png) no-repeat left center;
 }
 
 label{
